Add multiple spec support and change how they are read and served
* Update docs and example to behave nicely with swagger-ui

--- a/modules/swaggerapi/app/views/SwaggerAPI/ServeUI.html
+++ b/modules/swaggerapi/app/views/SwaggerAPI/ServeUI.html
@@ -33,7 +33,7 @@
       if (url && url.length > 1) {
         url = decodeURIComponent(url[1]);
       } else {
-        url = "{{.AssetsURL}}";
+        url = "{{.SwaggerSpecURL}}";
       }
 
       // Pre load translate...
